--- a/SampleJUnitPrj/build.xml
+++ b/SampleJUnitPrj/build.xml
@@ -39,7 +39,7 @@
       </junit>
 	</target>
 	  
-	<target name="test-reports" depends="test">
+	<target name="test-reports">
      <junitreport tofile="TESTS-TestSuites.xml" todir="${outputdir}">
         <fileset dir="${outputdir}">
             <include name="TEST-*.xml" />
